# SpotiVa

./: README.md  main.py  pyproject.toml  requirements.txt
app/spotiva/: __init__.py  main.py
app/spotiva/core/: __init__.py  constants.py  exceptions.py  state.py  title_sources.py
app/spotiva/domain/: __init__.py
app/spotiva/domain/entities/: __init__.py  track.py
app/spotiva/domain/repos/: __init__.py  audio_repo.py  catalog_repo.py  spotify_repo.py
app/spotiva/domain/services/: __init__.py  link_parser.py
app/spotiva/infra/: __init__.py
app/spotiva/infra/downloader/: __init__.py  asset_repository.py  audio_tagger.py  catalog_repository.py  models.py  track_mapper.py  yt_dlp_search_client.py
app/spotiva/infra/spotify/: __init__.py  catalog.py  preview_client.py  spotify_api_client.py  token_provider.py  track_mapper.py
app/spotiva/logic/: __init__.py
app/spotiva/logic/cases/: __init__.py  download_track.py  resolve_input.py  search_downloads.py  search_tracks.py
app/spotiva/ui/: __init__.py
app/spotiva/ui/ctrl/: __init__.py  main_ctrl.py
app/spotiva/ui/qt/: __init__.py  main_window.py  theme.py  workers.py
app/spotiva/ui/qt/widgets/: __init__.py  buttons.py  chips.py  detail_panel.py  empty_state.py  loading_state.py  nav_drawer.py  search_bar.py  settings_page.py  sidebar.py  track_card.py
