[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotiva"
version = "0.1.0"
description = "Modern app - Spotify track explorer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.7.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "mutagen>=1.47.0",
    "Pillow>=10.4.0",
    "yt-dlp>=2024.8.6",
]

[project.scripts]
spotiva = "spotiva.main:run"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
